--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "^0.11.2",
     "eslint": "^9.26.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
