--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@nuxt/content": "^3.5.1",
     "@nuxt/eslint": "^1.3.0",
     "@nuxt/fonts": "^0.11.2",
+    "@pinia/nuxt": "^0.11.0",
     "eslint": "^9.26.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "nuxt": "^3.16.2",
-    "vue": "^3.5.13",
+    "pinia": "^3.0.2",
+    "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   }
 }
